stops search being not wide enough on firefox

--- a/app/assets/stylesheets/web/layout/_navbar.css.scss
+++ b/app/assets/stylesheets/web/layout/_navbar.css.scss
@@ -127,6 +127,9 @@
       position: absolute;
       z-index: 9;
       transition: all 150ms ease-out; 
+      @media screen and (min-width: 769px) {
+        min-width: 98%;
+      }
       .search-wrapper {
         transition: all 150ms ease-out; 
         overflow: hidden;
